$Id: History,v 1.209 2002-11-27 12:53:43 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

27th November 2002  John Allison  (vis-V04-01-08)
- Fixes to HepRep - see History file.
- Added RegisterGraphicsSystem (new G4HepRep) in MyVisManager.cc.
- Fix (removal) of ambiguous G4VVisCommand::GetNewDoubleValue.
- Added /vis/viewer/set/globalMarkerScale.
- Improved algorithm of CompareForKernelVisit on OpenGL and OpenInventor.

21st November 2002  Gabriele Cosmo  (vis-V04-01-07)
- Corrections to HepRep module to allow porting on egcs compiler
  (M.Donszelmann).
- Patched access to static data in G4VisCommandsSceneAdd.cc, G4VisManager.cc
  and G4FlavoredParallelWorldModel.cc to allow porting on Windows DLLs.
  It requires co-working with tags "greps-V04-01-04" and "intercoms-V04-01-02".

15th November 2002  Mark Donszelmann  (vis-V04-01-06)
- HepRep2 driver implemented.

11th November 2002  John Allison  (vis-V04-01-05)