@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4VisStateDependent.cc,v 1.4 2001-09-10 10:41:33 johna Exp $
+// $Id: G4VisStateDependent.cc,v 1.5 2002-12-05 01:37:37 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 #include "G4VisStateDependent.hh"
@@ -35,16 +35,16 @@ G4VisStateDependent::G4VisStateDependent (G4VisManager* pVisManager):
 G4bool G4VisStateDependent::Notify (G4ApplicationState requestedState) {
   G4StateManager* stateManager = G4StateManager::GetStateManager();
   G4ApplicationState previousState = stateManager->GetPreviousState();
-  if (previousState == Idle  &&  requestedState == GeomClosed) {
+  if (previousState == G4State_Idle  &&  requestedState == G4State_GeomClosed) {
     fpVisManager -> BeginOfRun ();
   }
-  else if (previousState == GeomClosed &&  requestedState == EventProc) {
+  else if (previousState == G4State_GeomClosed &&  requestedState == G4State_EventProc) {
     fpVisManager -> BeginOfEvent ();
   }
-  else if (previousState == EventProc &&  requestedState == GeomClosed) {
+  else if (previousState == G4State_EventProc &&  requestedState == G4State_GeomClosed) {
     fpVisManager -> EndOfEvent ();
   }
-  else if (previousState == GeomClosed &&  requestedState == Idle) {
+  else if (previousState == G4State_GeomClosed &&  requestedState == G4State_Idle) {
     fpVisManager -> EndOfRun ();
   }
   return true;
